--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "phones",
-    "slug": "phones",
+    "name": "Jersey Hunt",
+    "slug": "Jersey Hunt",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
